SET(LOGIC_INTERFACE_DIR
	"${PROJECT_SOURCE_DIR}/logic/Interface"
)

FILE(GLOB LOGIC_INTERFACE "${PROJECT_SOURCE_DIR}/logic/Interface/*.*")

FILE(GLOB LOGIC_DIRS "${PROJECT_SOURCE_DIR}/logic/*")
FOREACH(LOGIC_DIR ${LOGIC_DIRS})
	string( COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/logic/AttrGenerator.exe" NOT_1)
	string( COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/logic/AttrGenerator.rar" NOT_2)
	string( COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/logic/CMakeLists.txt" NOT_3)
	string( COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/logic/Interface" NOT_4)
	IF(NOT_1 AND NOT_2 AND NOT_3 AND NOT_4)
		MESSAGE("添加子目录:${LOGIC_DIR}")
		ADD_SUBDIRECTORY(${LOGIC_DIR})
	ENDIF()
ENDFOREACH()
